# virtualenv-make-relocatable

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py  virtualenv-make-relocatable
virtualenv_relocator/: cmd.py  common.py  logger.py  utils.py
