[metadata]
name = virtualenv-make-relocatable
version = 0.0.1
url = https://github.com/heni/virtualenv-make-relocatable
description = simple tool to make virtualenv provided scripts relocatable
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
